8224815 broke Shenandoah build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 14
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b14

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_gtest_objs_test_arrayOop.o:
      In file included from /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shenandoah/shenandoahBarrierSet.inline.hpp:31:0,
                       from /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:40,
                       from /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/oops/access.inline.hpp:29,
                       from /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/oops/oop.inline.hpp:30,
                       from /shared/projects/openjdk/jdk-jdk/source/test/hotspot/gtest/oops/test_arrayOop.cpp:26:
      /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shenandoah/shenandoahHeap.inline.hpp: In member function ‘size_t ShenandoahHeap::heap_region_index_containing(const void*) const’:
      /shared/projects/openjdk/jdk-jdk/source/src/hotspot/share/gc/shenandoah/shenandoahHeap.inline.hpp:71:54: error: ‘base’ was not declared in this scope
         uintptr_t index = (region_start - (uintptr_t) base()) >> ShenandoahHeapRegion::region_size_bytes_shift();
                                                            ^
      At global scope:
      cc1plus: error: unrecognized command line option ‘-Wno-misleading-indentation’ [-Werror]
      cc1plus: error: unrecognized command line option ‘-Wno-implicit-fallthrough’ [-Werror]
      cc1plus: error: unrecognized command line option ‘-Wno-int-in-bool-context’ [-Werror]
      cc1plus: all warnings being treated as errors

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: