8230642: 8224815 broke Shenandoah build

Reviewed-by: shade